--- a/com/github/frenshyr/cs3230/gui/MathGui.form
+++ b/com/github/frenshyr/cs3230/gui/MathGui.form
@@ -4,7 +4,10 @@
     <constraints>
       <xy x="20" y="20" width="500" height="485"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-8999506"/>
+      <foreground color="-8999506"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="6fd9b" binding="heading" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
