--- a/src/main/java/com/github/frenshyr/cs3230/gui/CurrencyConverterGui.form
+++ b/src/main/java/com/github/frenshyr/cs3230/gui/CurrencyConverterGui.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.github.frenshyr.cs3230.gui.CurrencyConverterGui">
   <grid id="27dc6" binding="currencyConverterPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="700" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -22,7 +22,10 @@
       </grid>
       <grid id="a47ea" layout-manager="GridBagLayout">
         <constraints border-constraint="Center"/>
-        <properties/>
+        <properties>
+          <minimumSize width="495" height="172"/>
+          <preferredSize width="450" height="172"/>
+        </properties>
         <border type="none"/>
         <children>
           <hspacer id="32d12">
@@ -172,6 +175,7 @@
             </constraints>
             <properties>
               <editable value="false"/>
+              <preferredSize width="60" height="30"/>
               <text value="       "/>
             </properties>
           </component>
@@ -183,7 +187,8 @@
               <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
-              <text value="1.00"/>
+              <preferredSize width="60" height="30"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
